# OpenARC

./: .clang-format  .editorconfig  .git-blame-ignore-revs  .gitignore  .ruff.toml  CHANGELOG.md  LICENSE  LICENSE.Sendmail  Makefile.am  README.md  configure.ac
.github/workflows/: build-dist.yml  build.yml
contrib/: .gitignore  Makefile.am  openarc-genkey.py  openarc-keygen  openarc-keygen.1.in
contrib/init/generic/: openarc
contrib/init/redhat/: openarc.in
contrib/spec/: openarc.spec.in
contrib/systemd/: openarc.service.in
libopenarc/: Makefile.am  arc-canon.c  arc-canon.h  arc-dns.c  arc-dns.h  arc-internal.h  arc-keys.c  arc-keys.h  arc-mailparse.c  arc-mailparse.h  arc-tables.c  arc-tables.h  arc-types.h  arc-util.c  arc-util.h  arc.c  arc.h  base64.c  base64.h  openarc.pc.in
openarc/: Makefile.am  ar-test.c  config.c  config.h  openarc-ar.c  openarc-ar.h  openarc-config.h  openarc-crypto.c  openarc-crypto.h  openarc-test.c  openarc-test.h  openarc.8.in  openarc.c  openarc.conf.5.in  openarc.conf.sample  openarc.h  util.c  util.h
test/: Makefile.am  conftest.py  test_config.py  test_interop.py  test_keygen.py  test_milter.py
test/files/: milter.conf  test_config_fail.conf  test_config_requiresafekeys.conf  test_config_requiresafekeys_false.conf  test_dkimpy_verify.conf  test_milter_ar.conf  test_milter_ar_multi.conf  test_milter_ar_override_disabled.conf  test_milter_authresip.conf  test_milter_canon_simple.conf  test_milter_finalreceiver.conf  test_milter_idna.conf  test_milter_maximumheaders.conf  test_milter_minimum_key_bits.conf  test_milter_minimum_key_bits_fail.conf  test_milter_mode_none_sign.conf  test_milter_mode_none_verify.conf  test_milter_mode_s.conf  test_milter_mode_v.conf  test_milter_peerlist.conf  test_milter_resign.conf  test_milter_resign_s.conf  test_milter_responsedisabled.conf  test_milter_responseunwilling.conf  test_milter_signaturettl.conf  test_milter_softwareheader.conf
util/: .clang-format  arc-dstring.c  arc-dstring.h  arc-malloc.h  arc-nametable.c  arc-nametable.h
